--- a/style.css
+++ b/style.css
@@ -1,6 +1,8 @@
-body {
+html, body {
   margin: 0;
-  font-family: sans-serif;
+  padding: 0;
+  height: 100%;
+  overflow: hidden;
 }
 
 #container {
@@ -8,8 +10,11 @@ body {
   height: 100%;
 }
 
-#geojsonMap {
+svg {
   width: 100%;
   height: 100%;
-  background: #f5f5f5;
+}
+
+.geo-tooltip {
+  pointer-events: none;
 }
